reconstruct incompitable relation, now it's called cooccurrence relation